--- a/node/package.json
+++ b/node/package.json
@@ -16,5 +16,8 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "canvas": "^2.11.2"
     }
 }
