data visualizer done

--- a/view/package.json
+++ b/view/package.json
@@ -3,7 +3,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "setup": "./scripts/setup.sh"
     },
     "dependencies": {
         "solid-js": "^1.8.6"
